<resources>
    <string name="app_name">CMS Android Simulation</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_world">Hello world
    </string>
    <string name="increment">Increment</string>


    <!--    Strings for Post Requirement Page-->
    <string name="post_title">What is POSt?</string>
    <string name="post_desc"> - If you meet the grade requirements specific to your category, you’ll be allowed to enter your program of study in second year. We call that entering POSt (Program of Study).
        \n\n - If you make POSt, you will officially be in your desired program and will be allowed to continue until you graduate or elect to change programs.
        \n\n - If you do not meet minimum requirements in your first year, you will not be allowed to make POSt and will have to select a different program to switch to in your second year.</string>

    <!--    POSt Requirement Quiz-->
    <string name="post_quiz_title">Are You Eligible For POSt?</string>

    <!--    Question 1-->
    <string name="post_quiz_q1">Which POSt Are You Trying to Make?</string>
    <string name="post_quiz_q1_cs_specialist">Computer Science Specialist</string>
    <string name="post_quiz_q1_cs_major">Computer Science Major</string>
    <string name="post_quiz_q1_cs_minor">Computer Science Minor</string>
    <string name="post_quiz_q1_stats_specialist">Statistics Specialist</string>
    <string name="post_quiz_q1_stats_major">Statistics Major</string>
    <string name="post_quiz_q1_stats_minor">Statistics Minor</string>
    <string name="post_quiz_q1_math_specialist">Math Specialist</string>
    <string name="post_quiz_q1_math_major">Math Major</string>

    <!--    Question 2-->
    <string name="post_quiz_q2">What Is Your Admission Category?</string>
    <string name="post_quiz_q2_cs">Computer Science</string>
    <string name="post_quiz_q2_stats">Statistics</string>
    <string name="post_quiz_q2_math">Math</string>
    <string name="post_quiz_q2_other">Other</string>

    <!--    Question 3-->
    <string name="post_quiz_q3">Please Enter Your Achieved/Expected Marks in the Following Courses:</string>
    <string name="post_quiz_q3_mata31">MATA31 - Calculus I for Mathematical Sciences</string>
    <string name="post_quiz_q3_mata67">CSC/MATA67 - Discrete Mathematics</string>
    <string name="post_quiz_q3_mata22">MATA22 - Linear Algebra I for Mathematical Sciences</string>
    <string name="post_quiz_q3_mata37">MATA37 - Calculus II for Mathematical Sciences</string>
    <string name="post_quiz_q3_csca48">CSCA48 - Introduction to Computer Science II</string>
    <string name="post_quiz_q3_csca08">CSCA08 - Introduction to Computer Science I</string>
    <string name="post_quiz_placeholder">  eg. 70</string>

    <!--    Submit-->
    <string name="submit">Submit</string>

<!--    Results-->
    <string name="post_results_title">Here Are Your Results!</string>
    <!--    Results-->
    <string name="post_results_title">Here Are Your Results</string>
    <string name="post_results_banner">placeholder</string>
    <string name="post_results">placeholder</string>
    <string name="post_results_pass">Congratulations, you have met the POSt requirement!</string>
    <string name="post_results_fail">Unfortunately, you do not meet the POSt requirement</string>
    <string name="post_results_conditional_pass">POSt admission is conditional</string>
    <string name="post_results_stats_specialist_note">For the Machine Learning and Data Science stream only: a final grade of at least B in CSCA48H3</string>
    <string name="post_results_in_cms_condition">Admission will be based on academic performance in the required A-level courses. The admission requirements change each year depending on available spaces and the pool of eligible applicants, and students are cautioned that there is no guarantee of admission; as such, students are strongly advised to plan to enroll in backup programs.</string>

    <!--    Retake Quiz-->
    <string name="retake_post_quiz">Retake Quiz</string>

    <!--    Incorrect Input Messages-->
    <string name="NaN_input_error">Please enter a mark for all the listed courses</string>
    <string name="mark_input_out_of_bounds">Please enter a mark between 0 and 100</string>

    <!--    Strings for Admin Event Page-->
    <string name="admin_create_event">Create Event</string>
    <string name="admin_event_name">Event Name</string>
    <string name="admin_event_name_hint">Event name (maximum 200 characters)</string>
    <string name="admin_event_desc_hint">Description (maximum 1000 characters)</string>
    <string name="admin_event_start_time">Start: </string>
    <string name="admin_event_end_time">End: </string>
    <string name="admin_event_participants">Participants: </string>
    <string name="admin_event_participants_hint">eg. 100</string>
    <string name="admin_event_location">Location: </string>
    <string name="admin_event_location_hint">eg. AA 112</string>
    <string name="admin_event_input_error">Please fill in all criteria</string>
    <string name="admin_event_invalid_start_time">Event start dates must have already not passed</string>
    <string name="admin_event_invalid_end_time">Event end dates must not precede its start date</string>
    <string name="admin_event_invalid_event_name">Event name must be under 200 characters long</string>
    <string name="admin_event_invalid_event_desc">Event description must be under 1000 characters long</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>