<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/admin_new_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/admin_create_event"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/admin_new_event_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/admin_event_name"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/admin_new_event_title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/admin_new_event_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/admin_event_rounded_border"
            android:hint="@string/admin_event_name_hint"
            android:textSize="14dp"
            android:elevation="8dp"
            app:layout_constraintTop_toBottomOf="@+id/admin_new_event_name_text"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/admin_new_event_desc_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:background="@drawable/admin_event_rounded_border"
            android:hint="@string/admin_event_desc_hint"
            android:textSize="14dp"
            android:elevation="8dp"
            app:layout_constraintTop_toBottomOf="@+id/admin_new_event_name_input"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/admin_event_start_time_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/admin_event_start_time"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/admin_new_event_desc_input"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/admin_event_start_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/admin_event_start_time_text"
            app:layout_constraintEnd_toEndOf="parent">


            <TextView
                android:id="@+id/start_pick_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/admin_event_rounded_border"
                android:elevation="8dp"
                android:layout_weight="1"
                android:hint="Pick date"
                android:drawableRight="@drawable/calendar"/>

            <TextView
                android:id="@+id/start_pick_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/admin_event_rounded_border"
                android:elevation="8dp"
                android:layout_weight="1"
                android:hint="Pick time"
                android:drawableRight="@drawable/clock"/>

        </LinearLayout>

        <TextView
            android:id="@+id/admin_event_end_time_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/admin_event_end_time"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/admin_event_start_time_layout"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/admin_event_end_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/admin_event_end_time_text"
            app:layout_constraintEnd_toEndOf="parent">


            <TextView
                android:id="@+id/end_pick_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/admin_event_rounded_border"
                android:elevation="8dp"
                android:layout_weight="1"
                android:hint="Pick date"
                android:drawableRight="@drawable/calendar"/>

            <TextView
                android:id="@+id/end_pick_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/admin_event_rounded_border"
                android:drawableRight="@drawable/clock"
                android:elevation="8dp"
                android:hint="Pick time" />
        </LinearLayout>

        <TextView
            android:id="@+id/admin_event_participants_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/admin_event_participants"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/admin_event_end_time_layout"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/admin_event_participants_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/admin_event_rounded_border"
            android:hint="@string/admin_event_participants_hint"
            android:textSize="14dp"
            android:inputType="number"
            android:elevation="8dp"
            app:layout_constraintTop_toBottomOf="@+id/admin_event_participants_text"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/admin_event_location_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/admin_event_location"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/admin_event_participants_input"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/admin_event_location_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/admin_event_rounded_border"
            android:hint="@string/admin_event_location_hint"
            android:textSize="14dp"
            android:elevation="8dp"
            app:layout_constraintTop_toBottomOf="@+id/admin_event_location_text"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/admin_event_location_input"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/admin_events_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                app:cornerRadius="8dp"
                android:backgroundTint="@color/primary"
                android:text= "@string/submit"/>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>